--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="./css/index.css" />
-    <title>MERGED</title>
+    <title>Esper</title>
   </head>
   <body>
     <header>
